--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@types/jsonwebtoken": "^9.0.5",
-    "cloudinary": "^1.41.0",
+    "@headlessui/react": "^1.7.15",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "cloudinary": "^1.37.2",
     "graphql-request": "^6.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "next": "14.0.3",
-    "next-auth": "^4.24.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "jsonwebtoken": "^9.0.0",
+    "next": "13.4.7",
+    "next-auth": "^4.22.1",
+    "postcss": "8.4.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.1.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@grafbase/sdk": "^0.1.0"
   }
 }
