--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.1.0"
+    "@grafbase/sdk": "^0.1.0",
+    "typescript": "^5.3.2"
   }
 }
