--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ GOOGLE_CLIENT_ID=92797387290-0c9fonjgbtm4uncc0n8cp5qj708vg332.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=WRTwT9Lm7uy7CmsADXtigF8zKCP35PFd1y+h/wmauYQ=
 NEXTAUTH_URL=http://localhost:3000
+CLOUDINARY_NAME=dq2zfza4z
+CLOUDINARY_KEY=648348594123392
+CLOUDINARY_SECRET=Oai_8NoIS1nPn_55UegMT4SCAmw
